@@ -87,7 +87,7 @@ sub callback {
       my $xml = 
   "<?xml version = '1.0' encoding = 'UTF-8'?>\n".
   '<VOEvent role="test" version="1.1" '.
-  'id="ivo://estar.ex/test/'. $pid . ".". $counter .'" '.
+  'id="ivo://uk.org.estar/estar.ex#test/'. $pid . ".". $counter .'" '.
   'xmlns="http://www.ivoa.net/xml/VOEvent/v1.1" '.
   'xsi:schemaLocation="http://www.ivoa.net/xml/STC/stc-v1.20.xsd'. 
   ' http://hea-www.harvard.edu/~arots/nvometa/v1.2/stc-v1.20.xsd'. 
@@ -99,11 +99,11 @@ sub callback {
   'xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" '. 
   'xmlns:crd="http://www.ivoa.net/xml/STC/STCcoords/v1.20">'."\n".
   '<Citations>'."\n".
-  '  <EventID cite="supersedes">ivo://estar.ex/test/'. $pid . "." . $previous . 
+  '  <EventID cite="supersedes">ivo://uk.org.estar/estar.ex#test/'. $pid . "." . $previous . 
   '</EventID>' . "\n".
   '</Citations>'. "\n".
   '<Who>'. "\n".
-  '  <PublisherID>ivo://estar.ex/</PublisherID>'. "\n".
+  '  <PublisherID>ivo://uk.org.estar/estar.ex#</PublisherID>'. "\n".
   '  <Date>'.time_iso().'</Date>'. "\n".
   '</Who>'. "\n".
   '<What>'. "\n".
